04.18.2011 - 0.5.2
    * Update distribution metadata
    * Change distribution name to 'srllib' for simplicity

03.15.2011 - 0.5.1
    * srllib.util: make remove_dir only chmod directory itself and its
    children in force mode
    * srllib.util: make remove_file only chmod file itself in force mode
    * srllib.util: make replace_root return purely relative paths (i.e., no
    preceding './')
    * srllib.util: fix bug when calling remove_dir on relative directory in force_mode

03.07.2011 - 0.5.0
    * srllib.util: add argument 'fs_mode' to copy_dir and copy_file

12.15.2010 - 0.4.3
    * Use MANIFEST.in to include distribute_setup.py

12.14.2010 - 0.4.2
    * testing.mock: Ignore __weakref__ in class interfaces

11.16.2010 - 0.4.1
    * Make sure distribute_setup.py is included in source distribution

11.16.2010 - 0.4.0
    * Use distribute instead of setuptools in setup.py

09.07.2010 - 0.3.0
    * util.replace_root: Handle UNIX pathseparators on Windows
    * Add Solaris OS identifier

08.06.2010 - 0.2.0a5
    * Fix cornercase with dangling symlink to sibling directory in util.remove_dir 
    * Handle variation of uname output on Windows
    * Fix util.resolve_path with pywin32
    * Better error message from util.replace_root

10.20.2009 - 0.2.0a4
    * Make util.resolve_path not require pywin32
    * Fix QAction-related bug 
    * Fix util.replace_root 
    * Fix some file/directory copying bugs in util
    * Update ez_setup

10.17.2008 - 0.2.0a3
    * Revised testing.TestCase._get_privattr semantics
    * Added support for raising exceptions from testing.mock.FunctionMock

10.13.2008 - 0.2.0a2:
    * Changed testing package to use nose 0.10 series

07.08.2007 - 0.1.0a3:
    * Fixed bugs in testing.mock
    * Significantly expanded upon testing.mock module
    * New function util.read_file

07.08.2007 - 0.1.0a2:
    * Cleaned up process module
    * New Qt helper class StatefulConnection

06.29.2007 - 0.1.0a1:
    * Added module "process"