@@ -1,3 +1,6 @@
+    * Skip Qt4 tests if PyQt4 not installed
+    * Start debug logging in srllib
+
 04.18.2011 - 0.5.2
     * Update distribution metadata
     * Change distribution name to 'srllib' for simplicity
